correction icone collapse

--- a/src/components/Collapse/collapse.scss
+++ b/src/components/Collapse/collapse.scss
@@ -38,7 +38,7 @@
     .Collapse-icon {
       transform: rotate(0);
       transition: transform 0.3s ease;
-      font-size: 35px;
+      font-size: 30px;
      
       
 
